# Update_Links

./: .gitignore  README.md  config_template.ini  requirements.txt  setup.cfg  setup.py
results/: README.txt
src/dlmf_pkg/: dlmf_scraping_script.py  scrape_dlmf_2011_until_2012.py  scrape_dlmf_2013_until_2019.py  wayback_fishing.py
src/dlmf_scraping/: dlmf_scraping_script.py  process_versions.py  scrape_all_historical.py  scrape_dlmf_2008.py  scrape_dlmf_2008_until_2010.py  scrape_dlmf_2009.py  scrape_dlmf_2010.py  scrape_dlmf_2011.py  scrape_dlmf_2012.py  scrape_dlmf_2013.py  scrape_dlmf_2014.py  scrape_dlmf_2015.py  scrape_dlmf_2016.py  scrape_dlmf_2017.py  scrape_dlmf_2018.py  scrape_dlmf_2019.py  scrape_dlmf_2020.py  scrape_dlmf_2021.py
src/dlmf_scraping/db_modifications/: insert_with_app.py
src/dlmf_scraping/historical_scrapings/: scrape_all_historical.py  scrape_dlmf_2008.py  scrape_dlmf_2008_until_2010.py  scrape_dlmf_2009.py  scrape_dlmf_2010.py  scrape_dlmf_2011.py  scrape_dlmf_2011_until_2012.py  scrape_dlmf_2012.py  scrape_dlmf_2013.py  scrape_dlmf_2013_until_2019.py  scrape_dlmf_2014.py  scrape_dlmf_2015.py  scrape_dlmf_2016.py  scrape_dlmf_2017.py  scrape_dlmf_2018.py  scrape_dlmf_2019.py  scrape_dlmf_2020.py  scrape_dlmf_2021.py  wayback_fishing.py
src/oeis_scraping/: scrape_oeis_2021.py
src/oeis_scraping/manipulate_csv_files/: creation_link_table.py  merge_all_csv_files.py
src/update_zblinks_api/: __init__.py  matrix_table_datasets.py  update_with_api.py
src/update_zblinks_api/dlmf_scraping/: scrape_dlmf.py
src/update_zblinks_api/dlmf_scraping/historical/: process_historical.py  process_versions.py  scrape_dlmf_2008.py  scrape_dlmf_2009.py  scrape_dlmf_2010.py  scrape_dlmf_2011.py  scrape_dlmf_2013.py  scrape_dlmf_2015.py  scrape_dlmf_2016.py  scrape_dlmf_2019.py  scrape_dlmf_2020.py  scrape_dlmf_2021.py  scrape_dlmf_historical.py
src/update_zblinks_api/dlmf_scraping/historical/helpers/: historical_helpers.py
src/update_zblinks_api/helpers/: dlmf_helpers.py  source_helpers.py  zbmath_helpers.py
tests/: conftest.py  fixtures.py  test_dlmf_helpers.py  test_update.py
(+3 files in other folders)
