[metadata]
name = dlmf-scraping
version = 0.1.0
description = Scraping DLMF bibliography.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Dariush Ehsani, Matteo Petrera
maintainer_email = dariush@zbmath.org, matteo@zbmath.org

[options]
setup_requires = setuptools-scm
install_requires =
    requests
    bs4
    pandas
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dlmf-scrape = dlmf_scraping.dlmf_scraping_script:main

[pycodestyle]
max-line-length = 79
