[metadata]
name = update-zblinks-api
version = 0.1.0
description = Update the zbLinks Api.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Dariush Ehsani, Matteo Petrera
maintainer_email = dariush@zbmath.org, matteo@zbmath.org

[options]
setup_requires = setuptools-scm
install_requires =
    click
    requests
    bs4
    pandas
    psycopg2
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    update-api = update_zblinks_api.update_with_api:update

[pycodestyle]
max-line-length = 79
